fixed dir-items spacing

--- a/front-end/src/Components/css/DirGrid.css
+++ b/front-end/src/Components/css/DirGrid.css
@@ -4,7 +4,7 @@
     grid-template-rows: repeat(6, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    height: 2500px;
+    height: 300vh;
     text-align: center;
 }
 
@@ -44,7 +44,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: center;
     justify-items: center;
     align-items: center;
 }
@@ -62,6 +62,13 @@
     width: 200px;
     height: 50px;
     margin: 5px;
+    margin-top: 30%;
+}
+
+h1 {
+    margin: 5px;
+    margin-top: 10%;
+    margin-bottom: 15%;
 }
 
 p {
